feat: favorites
getFavorites api done and postFavorite api done

function refectoring required
